# spacegame

./: .gitignore  .ycm_extra_conf.py  2  AUTOCMPL.sh  BUILD.sh  CMakeCache.txt  CMakeLists.txt  CPPCHECK.sh  DOXYGEN.sh  GDB.sh  Makefile  README.md  REMOVE-testsave2  RUN.sh  Spacegame  VALGRIND_LEAK.sh  VALGRIND_PROFILE.sh  WINCOMPL.sh  \  ]  _FINDTERM.sh  _LINECOUNT.sh  _WININSTALLLIBS.sh  a.out  b.out  c.out  cmake_install.cmake  compile_commands.json  debugUI.cpp  design  main.c  main.cpp  mame.ini  physics.cpp  physics.h  physics.h.gch  plugin.ini  scomp.sh  sprite.cpp  sprite.h  (+2 more)
Prototype_First/: .main.cpp.swp  main.cpp  scomp.sh
docs/: Exit-Codes.txt  doxconfig.cfg
docs/html/: FS_8h.html  FS_8h__dep__incl.map  FS_8h__dep__incl.md5  FS_8h__incl.map  FS_8h__incl.md5  FS_8h_source.html  GeneralEngineCPP_8h_source.html  UI_8h_source.html  annotated.html  camera_8h.html  camera_8h__dep__incl.map  camera_8h__dep__incl.md5  camera_8h__incl.map  camera_8h__incl.md5  camera_8h_source.html  classBulletType.html  classBulletType__coll__graph.map  classBulletType__coll__graph.md5  classBulletType__inherit__graph.map  classBulletType__inherit__graph.md5  classEnemie.html  classEnemie__coll__graph.map  classEnemie__coll__graph.md5  classEnemie__inherit__graph.map  classEnemie__inherit__graph.md5  classGE__PhysicsObject.html  classGE__PhysicsObject__coll__graph.map  classGE__PhysicsObject__coll__graph.md5  classGE__PhysicsObject__inherit__graph.map  classGE__PhysicsObject__inherit__graph.md5  classGE__UI__Button.html  classGE__UI__Button__coll__graph.map  classGE__UI__Button__coll__graph.md5  classGE__UI__Button__inherit__graph.map  classGE__UI__Button__inherit__graph.md5  classGE__UI__Element.html  classGE__UI__Element__inherit__graph.map  classGE__UI__Element__inherit__graph.md5  classGE__UI__Minimap.html  classGE__UI__Minimap__coll__graph.md5  (+189 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  variables_0.js  variables_1.js
docs/man/man3/: BulletType.3  Camera.3  DirList.3  Enemie.3  FS.h.3  GE_Color.3  GE_DevException.3  GE_Event.3  GE_Experimental_UI_Button.3  GE_Experimental_UI_TextList.3  GE_FileNotFound.3  GE_Font.3  GE_GlueTarget.3  GE_HollowRectangleShape.3  GE_LevelEditorInterface.3  GE_LevelEditorObjectProperties.3  GE_Line.3  GE_MinimapTarget.3  GE_NetworkSocket.3  GE_Networkable.3  GE_PhysicsObject.3  GE_PhysicsObjectHighlightBoxManager.3  GE_PhysicsObjectResizeManager.3  GE_Rectangle.3  GE_RectangleShape.3  GE_Rectangler.3  GE_RenderedObject.3  GE_SDLEvent.3  GE_Shape.3  GE_SingleStar.3  GE_Sprite.3  GE_Stars.3  GE_ThreadedDelete.3  GE_ThreadedEventStack.3  GE_TrackedObject.3  GE_UI_Button.3  GE_UI_ButtonStyle.3  GE_UI_ClickedObject.3  GE_UI_DraggableProgressBar.3  GE_UI_Element.3  (+120 more)
fonts/: info.txt  list.json
handwritten_docs/: glue.txt  renderedObject.txt  sprite.txt
notes/: collisionnotes.txt  multiplayer.txt  physicsengine  tasklist
notes/ideas/: achievements
sprites/: autogen-dir.py  list.json
src/: '  .UI.cpp.swp  .UI.h.swp  .main.cpp.swo  .main.cpp.swp  .physics.cpp.swo  .physics.cpp.swp  .physics.h.swo  .physics.h.swp  .sprite.cpp.swp  :  :w  FS.cpp  FS.h  GeneralEngineCPP.cpp  GeneralEngineCPP.h  UI.cpp  UI.h  \  ]  camera.cpp  camera.h  classes.cpp  classes.h  collision.cpp  collision.h  debugRenders.cpp  debugRenders.h  debugUI.cpp  debugUI.h  dev-exception.h  engine.cpp  engine.h  error.h  event.cpp  event.h  font.cpp  font.h  gameRender.cpp  gameRender.h  (+47 more)
tests/: a.out  array.cpp  header.cpp  header.h  inherit.cpp  test.cpp
windows/Hack/: Hack.exe.manifest  _bz2.pyd  _ctypes.pyd  _hashlib.pyd  _lzma.pyd  _socket.pyd  _ssl.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd
